--- a/styles.scss
+++ b/styles.scss
@@ -1,3 +1,4 @@
+/* You can add global styles to this file, and also import other style files */
 $fontGrande: 50px;
 $fontMedio: 35px;
 $fontChico: 20px;
